# eLogic

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  adder.aag  build.sh  lib_expr2cost.json  mig_emig_k8_dc.log2  run.sh
emig/: CMakeLists.txt  baseline.cpp  baseline.hpp  egg_view.hpp  main.cpp  rewrite_egg.hpp
mig/: eggexpr.py  main.py  mig_rewrite.py  mig_rewrite2.py  util.py  vparser.py
mig_egg/: CMakeLists.txt  Cargo.toml  build.rs  test.txt
mig_egg/src/: lib.rs  lib2.rs
mig_egg/src/extract/: bottom_up.rs  faster_greedy_dag.rs  faster_ilp_cbc.rs  global_greedy_dag.rs  ilp_cbc.rs  mod.rs
mignite/: Cargo.toml
mignite/src/: lib.rs  mig4.rs  mig4_egg.rs  mig4_map.rs  mig4_transform.rs
src/: main.rs
tests/: prop.rs
tools/: CMakeLists.txt  mig_syn.cpp
