[package]
name = "mig_egg"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cxx-build = "1.0"

[lib]
name = "mig_egg"
crate-type = ["staticlib"]

[dependencies]

cxx = "1.0"
egg = { version = "0.10.0", features = ["lp"] }
pyo3 = { version = "0.23.3", features = ["extension-module"] }
coin_cbc = { version = "0.1.8", optional = true }
rustc-hash = "2.0.0"
indexmap = "2.0.0"
rpds = "1.1.0"
egraph-serialize = { version = "0.2.0"}
ordered-float = "4.5.0"
fxhash = "0.2.1"
hashbrown = "0.15.1"
log = "0.4.20"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
flussab-aiger = "0.1.1"
env_logger = "0.10"
colored = "2.0"

[features]
ilp-cbc = ["coin_cbc"]
default = ["ilp-cbc"]
