[package]
name = "mignite"
version = "0.1.0"
authors = ["Dan Ravensloft <dan.ravensloft@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aiger = "0.2"
itertools = "0.13.0"
petgraph = "0.6.5"
egg = { version = "0.9.5"} #, features = ["lp"] }
indexmap = "2.6.0"
rustc-hash = "2.0.0"
ordered-float = "4.5.0"
fxhash = "0.2.1"
hashbrown = "0.15.1"
log = "0.4.20"
egraph-serialize = { version = "0.2.0", features = ["graphviz","serde"] }

# for the serde-1 feature
serde = "1.0.137"
vectorize = { version = "0.2.0", optional = true }
serde_json = "1.0"
saturating = "0.1.0"
#egraph-serialize = { path = "src/egraph-serialize/" }
regex = "1.5"
num = "0.4.0"
rayon = "1.7"
env_logger = { version = "0.11.5", default-features = false }
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }
symbol_table = { version = "0.4.0", features = ["global"] }
thiserror = "2.0.1"
instant = "0.1.12"